[tool.poetry]
name = 'cvtk'
version = '0.2.2'
description = 'Computer Vision Toolkit'
authors = ['Jianqiang Sun <sun@bitdessin.dev>']
readme = 'README.md'
classifiers = [
        'Development Status :: 3 - Alpha',
        'Environment :: Console',
        'Intended Audience :: Science/Research',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Image Recognition',
]
license = 'MIT'


[tool.poetry.urls]
Homepage = 'https://github.com/bitdessin/cvtk'
Issues = 'https://github.com/bitdessin/cvtk/issues'


[tool.poetry.scripts]
cvtk = 'cvtk.scripts.cvtk:main'


[tool.poetry.dependencies]
Pillow = '*'
numpy = '>= 1.21'
pandas = '>= 1.3'


[tool.poetry.group.dev.dependencies]
python = '>=3.10'
requests = '*'
Pillow = '*'
numpy = '*'
pandas = '>= 1.3'
matplotlib = '*'
torch = '*'
torchvision = '*'
pycocotools = '*'
plotly = '*'
kaleido = '*'
scikit-learn = '*'


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = '*'
sphinxcontrib-napoleon = '*'
requests = '*'
Pillow = '*'
numpy = '*'
pandas = '*'
matplotlib = '*'
torch = '*'
torchvision = '*'
pycocotools = '*'
plotly = '*'
kaleido = '*'
scikit-learn = '*'


[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
