[project]
name = 'cvtk'
description = 'computer vision toolkit'
authors = [
    { name = 'Jianqiang Sun', email = 'sun@bitdessin.dev' },
]
readme = 'README.md'
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Science/Research',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Image Recognition',
]
license = {'text' = 'MIT'}
requires-python = '>=3.10'
dependencies = [
    'requests',
    'filetype',
    'pillow',
    'numpy>=1.21',
    'pandas>=1.3',
    'matplotlib',
    'pycocotools',
    'scikit-learn',
    'scikit-image',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/bitdessin/cvtk'
Issues = 'https://github.com/bitdessin/cvtk/issues'


[project.scripts]
cvtk = 'cvtk.scripts.cvtk:main'


[project.optional-dependencies]
full = [
    'torch',
    'torchvision',
    'openmim',
    'mmengine',
    'mmcv',
    'mmdet',
    'plotly',
    'kaleido',
    'flask',
    'gunicorn',
    'label-studio-sdk',
    'label-studio-ml',
    'label-studio-tools',
]
docs = [
    'torch',
    'torchvision',
    'openmim',
    'mmengine',
    'mmcv-lite',
    'mmdet',
    'plotly',
    'kaleido',
    'flask',
    'gunicorn',
    'label-studio-sdk',
    'label-studio-ml',
    'label-studio-tools',
    'sphinx',
    'sphinx-rtd-theme',
    'sphinxcontrib-napoleon',
]


[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'
